MDEV-7528 GIS: Functions return NULL instead of specified -1 for NULL arguments.         The behaviour required by the standard seems too weird to expect.